refactor group channel options to channels compact mode
